--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "coffee-script": "*",
     "del": "*",
     "gulp": "*",
+    "gulp-coffee": "*",
+    "gulp-concat": "*",
     "gulp-flatten": "*"
   }
 }
