--- a/assets/javascripts/app.json
+++ b/assets/javascripts/app.json
@@ -1,6 +1,9 @@
 {
   "list": [
     "assets/javascripts/js/jquery-1.11.1.min.js",
+    "assets/javascripts/js/headshrinker.js",
+    "assets/javascripts/js/scrollup.js",
+    "assets/javascripts/js/slicknav.js",
     "assets/javascripts/js/application.js"
   ]
 }
