--- a/plugin/package.json
+++ b/plugin/package.json
@@ -7,17 +7,18 @@
     "coffee-script": "*",
     "del": "*",
     "gulp": "*",
+    "gulp-bower": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
-    "gulp-if": "*",
-    "gulp-watch": "*",
     "gulp-flatten": "*",
-    "gulp-less": "*",
+    "gulp-if": "*",
     "gulp-order": "*",
     "gulp-plumber": "*",
+    "gulp-ruby-sass": "*",
     "gulp-sourcemaps": "*",
     "gulp-uglify": "*",
     "gulp-uglifycss": "*",
+    "gulp-watch": "*",
     "yargs": "*"
   }
 }
