Updated readme description

--- a/plugin/bower.json
+++ b/plugin/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vital",
+  "name": "Gulp Wordpress",
   "version": "0.0.0",
   "authors": [
     "Benson Ho <benson@goodafternoon.com.au>"
