manage wordpress plugins

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -21,6 +21,7 @@
     "gulp-imagemin": "*",
     "gulp-uglify": "*",
     "gulp-uglifycss": "*",
+    "gulp-unzip": "*",
     "gulp-watch": "4.2.2",
     "yargs": "*"
   }
