--- a/plugin/package.json
+++ b/plugin/package.json
@@ -13,6 +13,7 @@
     "gulp-flatten": "*",
     "gulp-htmlclean": "*",
     "gulp-if": "*",
+    "gulp-livereload": "*",
     "gulp-order": "*",
     "gulp-plumber": "*",
     "gulp-ruby-sass": "1.4.0",
