working towards breaking up the tasks into multiple files

--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "del": "*",
     "fs": "*",
     "path": "*",
+    "run-sequence": "*",
+    "require-dir": "*",
+    "util": "*",
     "gulp": "*",
     "gulp-bower": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
+    "gulp-download": "*",
     "gulp-flatten": "*",
     "gulp-htmlclean": "*",
     "gulp-if": "*",
