--- a/package.json
+++ b/package.json
@@ -10,29 +10,26 @@
     "coffee-script": "*",
     "del": "*",
     "fs": "*",
-    "path": "*",
-    "run-sequence": "*",
-    "require-dir": "*",
-    "util": "*",
     "gulp": "*",
     "gulp-bower": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
     "gulp-download": "*",
-    "gulp-flatten": "*",
     "gulp-htmlclean": "*",
     "gulp-if": "*",
-    "gulp-livereload": "*",
-    "gulp-order": "*",
-    "gulp-plumber": "*",
-    "gulp-ruby-sass": "1.4.0",
-    "gulp-sourcemaps": "*",
-    "gulp-sizereport": "*",
     "gulp-imagemin": "*",
+    "gulp-livereload": "*",
+    "gulp-ruby-sass": "1.4.0",
+    "gulp-sizereport": "*",
+    "gulp-sourcemaps": "*",
     "gulp-uglify": "*",
     "gulp-uglifycss": "*",
     "gulp-unzip": "*",
     "gulp-watch": "4.2.2",
+    "object-merge": "*",
+    "path": "*",
+    "run-sequence": "*",
+    "util": "*",
     "yargs": "*"
   }
 }
