Adding comments to the tasks

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gulp Wordpress",
+  "name": "WordPress Theme Builder",
   "version": "0.0.0",
   "authors": [
     "Benson Ho <benson@goodafternoon.com.au>"
