big reworking of the entire project
- loading all task files dynamically using required-tasks.
- loaded all required packages into the global namespace as oppose to inside individual task files so that they are not repeatedly loaded.
- improved the config variable and its initialisation
- properly capture and set command line arguments
- added browser-sync task

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "wptb": "./wordpress-theme-builder.js"
   },
   "dependencies": {
-    "browserify": "*",
-    "coffee-script": "*",
-    "del": "*",
-    "graceful-fs": "*",
-    "gulp": "*",
+    "browserify": "13.1.0",
+    "browser-sync": "*",
+    "coffee-script": "1.10.0",
+    "del": "2.2.2",
+    "graceful-fs": "4.1.6",
+    "gulp": "3.9.1",
     "gulp-bower": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
@@ -19,6 +20,7 @@
     "gulp-if": "*",
     "gulp-imagemin": "*",
     "gulp-livereload": "*",
+    "gulp-require-tasks": "*",
     "gulp-ruby-sass": "1.4.0",
     "gulp-sizereport": "*",
     "gulp-sourcemaps": "*",
