--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "wptb": "./wordpress-theme-builder.js"
   },
   "dependencies": {
-    "browserify": "13.1.0",
+    "browserify": "*",
     "browser-sync": "*",
-    "coffee-script": "1.10.0",
+    "coffee-script": "*",
     "dateformat": "*",
-    "del": "2.2.2",
-    "graceful-fs": "4.1.6",
-    "gulp": "3.9.1",
+    "del": "*",
+    "graceful-fs": "*",
+    "gulp": "*",
     "gulp-bower": "*",
     "gulp-coffee": "*",
     "gulp-concat": "*",
@@ -21,14 +21,13 @@
     "gulp-if": "*",
     "gulp-imagemin": "*",
     "gulp-livereload": "*",
-    "gulp-require-tasks": "*",
-    "gulp-ruby-sass": "1.4.0",
+    "gulp-sass": "*",
     "gulp-sizereport": "*",
     "gulp-sourcemaps": "*",
     "gulp-uglify": "*",
     "gulp-uglifycss": "*",
     "gulp-unzip": "*",
-    "gulp-watch": "4.2.2",
+    "gulp-watch": "*",
     "object-merge": "*",
     "path": "*",
     "run-sequence": "*",
