included the option to compile Less as well as Sass by setting a variable in the config (defaults to Sass)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-htmlclean": "*",
     "gulp-if": "*",
     "gulp-imagemin": "*",
+    "gulp-less": "*",
     "gulp-livereload": "*",
     "gulp-sass": "*",
     "gulp-sizereport": "*",
