include the todo gulp plugin to generate Todo's in a project

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "*",
     "gulp-sizereport": "*",
     "gulp-sourcemaps": "*",
+    "gulp-todo": "*",
     "gulp-uglify": "*",
     "gulp-uglifycss": "*",
     "gulp-unzip": "*",
