bugs in the watch task

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-uglifycss": "*",
     "gulp-unzip": "*",
     "gulp-watch": "*",
+    "js-yaml": "*",
     "object-merge": "*",
     "path": "*",
     "run-sequence": "*",
